# ROS_VEX_Bridge

./: README.md
ROS_VEX_Bridge/: CMakeLists.txt  package.xml
ROS_VEX_firmware/src/libraries/RobotC/: I2C_encoder_driver.h  diff_controller.h  encoder_driver.c  main.c  motor_driver.h  sensors.h  shaft_encoder_driver.h  test - 副本.c  test.c
ROS_VEX_msgs/: CMakeLists.txt  package.xml
ROS_VEX_msgs/msg/: ArduinoConstants.msg
ROS_VEX_python/: CMakeLists.txt  package.xml  setup.py
ROS_VEX_python/config/: VEX_params.yaml
ROS_VEX_python/launch/: VEX.launch
ROS_VEX_python/nodes/: VEX_node.py
ROS_VEX_python/src/ROS_VEX_python/: VEX_driver.py  VEX_sensors.py  base_controller.py
