<package>
  <name>ROS_VEX_bridge</name>
  <version>0.2.0</version>
  <description>
    Metapackage for ROS_VEX_bridge. 
  </description>
  <author>Patrick Goebel</author>
  <maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/ROS_VEX_bridge</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ROS_VEX_firmware</run_depend>
  <run_depend>ROS_VEX_msgs</run_depend>
  <run_depend>ROS_VEX_python</run_depend>

  <export>
   <metapackage/>
  </export>
</package>
