<package>
  <name>ROS_VEX_msgs</name>
  <version>0.2.0</version>
  <description>
    ROS VEX Messages.
  </description>
  <author>Patrick Goebel</author>
  <maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/ROS_VEX_msgs</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  
</package>
